# cle-documenters-classify-notes

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  HISTORY.md  NOTEPAD.md  README.md  meeting-notes-agent-architecture.md  pyproject.toml
.github/workflows/: classify.yml  test.yml
data/examples/: manifest.sample.json
docs/: client-guide.md  client-slides.md
evals/: eval_classify.py
src/documenters_cle_langchain/: __init__.py  app.py  classifiers.py  classify_themes.py  cli.py  dedup.py  extract_candidates.py  extraction.py  feedback.py  gate.py  gdrive.py  graph.py  gsheets.py  ingest.py  llm_handoff.py  manifest.py  models.py  pipeline.py  quality.py  retrieve_context.py  schemas.py  text_extract.py  theme_library.py  write_back.py
tests/: conftest.py  test_classify_themes.py  test_dedup.py  test_e2e.py  test_extract_candidates.py  test_extraction.py  test_feedback.py  test_gate.py  test_gdrive_integration.py  test_graph.py  test_gsheets.py  test_ingest.py  test_manifest.py  test_retrieve_context.py  test_text_extract.py  test_theme_library.py  test_write_back.py
tests/fixtures/: fixture_inline_editor_note.txt  fixture_land_bank.txt  fixture_no_questions.txt  fixture_public_safety.txt  fixture_single_question.txt  hard_case_note.txt
